work on motivation section

--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -386,7 +386,7 @@ As a consequence, the validator may recommend to express the stated axioms/const
 %If we want to use OWL 2 for RDF validation, we have to ensure that as many requirements for formulating RDF constraints are fulfilled
 %and that the computational complexity to formulate these constraints is satisfying.  
 
-This paper serves to answer two \textbf{research questions}:
+This paper serves to answer the following \textbf{research questions}:
 \begin{itemize}
 	%\item Which constraints are expressible by DL and which are only expressible by a query language (e.g Datalog or SPARQL)?
 	%\item For which requirements formulating constraints the expressivity of \textit{DL-Lite}$_\mathcal{A}$ (respectively OWL 2 QL) is sufficient
@@ -398,13 +398,13 @@ This paper serves to answer two \textbf{research questions}:
 	\item How to classify constraints and constraint languages according to expressivity, complexity, and user-friendliness?
 \end{itemize}
 
-The three \textbf{main contributions} of this paper are:
+The \textbf{main contributions} of this paper are:
 \begin{itemize}
-  \item We explain why OWL can be used as constraint language
+  %\item We explain why OWL can be used as constraint language
 	\item We explain why reasoning is beneficial for validation and how reasoning interacts with validation
-  \item We investigate the effects on complexity expressing each constraint
-	\item We show that OWL 2 QL together with additional DSCLs completely satisfy all RDF validation requirements.
-	\item We evaluated to which extend the five possible standard DSCLs fulfill each requirement.
+  %\item We investigate the effects on complexity expressing each constraint
+	%\item We show that OWL 2 QL together with additional DSCLs completely satisfy all RDF validation requirements.
+	%\item We evaluated to which extend the five possible standard DSCLs fulfill each requirement.
 \end{itemize}
 
 \section{Expressivity and Complexity in OWL 2 Reasoning}
