--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -604,10 +604,8 @@ Even if the expressivity (\ms{Expr-C}) of SPIN is much higher than of ShEx
 it could be quite beneficial to choose ShEx rather than SPIN (in case the three constraints are covered by both).
 Now, the user-friendliness classes comes into play:
 \begin{eqnarray*}
-\ms{UF-L}(SPIN) \subset \ms{UF-L}(ShEx) \\
-\ms{UF-I}(SPIN) \subset \ms{UF-I}(ShEx) \\
-\ms{UF-C}(SPIN) \subset \ms{UF-C}(ShEx) \\
-\ms{UF-L}(ShEx) \subset \ms{UF-L}(SPIN)
+\ms{UF-L}(SPIN) \subset \ms{UF-L}(ShEx), \ms{UF-I}(SPIN) \subset \ms{UF-I}(ShEx) \\
+\ms{UF-C}(SPIN) \subset \ms{UF-C}(ShEx), \ms{UF-L}(ShEx) \subset \ms{UF-L}(SPIN)
 \end{eqnarray*}
 Although, SPIN is more adopted than ShEx, ShEx is a high-level compared to a low-level language, ShEx is more intuitive and concise than SPIN.
 According to this evaluation, tools may recommend alternatives to the most expressive language SPIN.  
