--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -588,10 +588,10 @@ It depends on the individual use case, which constrains are needed to express an
 As a consequence, you may select a DSCL which is not the most expressive one within one specific expressivity class, 
 but may be better evaluated according to one or multiple user-friendliness classes.
 If, for instance, reasoning should not be performed and three particular constraints should be covered by the DSCL.
-Even if the expressivity (\ms{Expr-C}) of SPIN is much higher than of ShEx  
-\begin{eqnarray*}
-\ms{Expr-C}(ShEx) \subset \ms{Expr-C}(SPIN)
-\end{eqnarray*}
+Even if the expressivity (\ms{Expr-C}) of SPIN is much higher than of ShEx (\ms{Expr-C}(ShEx) $\subset$ \ms{Expr-C}(SPIN)) 
+%\begin{eqnarray*}
+%\ms{Expr-C}(ShEx) \subset \ms{Expr-C}(SPIN)
+%\end{eqnarray*}
 it could be quite beneficial to choose ShEx rather than SPIN (in case the three constraints are covered by both).
 Now, the user-friendliness classes comes into play:
 \begin{eqnarray*}
